# SimpleFOC-rs

./: .gitignore  CITATION.cff  Cargo.toml  Contributing.md  LICENSE-MIT  Makefile.toml  README.md  flake.nix  thoughts.md
.cargo/: config.toml
core/: Cargo.toml
core/examples/: spinny.rs  velocity_ctrl.rs
core/src/: base_traits.rs  bldc_driver.rs  bldc_driver6pwm.rs  bldc_motor.rs  commands.rs  common.rs  current_sensor.rs  foc_control.rs  hw_drivers.rs  lib.rs
core/src/base_traits/: bldc_driver.rs  foc_control.rs  foc_motor.rs  pos_sensor.rs
core/src/common/: helpers.rs  lp_filter.rs  pid.rs  types.rs
core/src/foc_control/: control_utils.rs
esp32-sfoc/: Cargo.toml
esp32-sfoc/src/: device.rs  main.rs  posn_encoder.rs  time_source.rs
esp32_sfoc/: Cargo.toml
esp32_sfoc/src/: main.rs  posn_encoder.rs  time_source.rs
examples/: prototype.rs  spinny.rs
peripherals/AS5047P/: Cargo.toml
peripherals/AS5047P/src/: lib.rs
prototype/: Cargo.toml
prototype/src/: lib.rs
spinnies/esp32/original/: Cargo.toml
spinnies/esp32/original/.cargo/: config.toml
spinnies/esp32/s3/: Cargo.toml  build.rs
spinnies/esp32/s3/.cargo/: config.toml
spinnies/generic_spinny/: Cargo.toml  README.md
spinnies/generic_spinny/src/: lib.rs
src/: base_traits.rs  bldc_driver.rs  bldc_driver6pwm.rs  bldc_motor.rs  common.rs  current_sensor.rs  defaults.rs  foc_motor.rs  foc_utils.rs  hw_drivers.rs  lib.rs  lp_filter.rs  pid.rs  pos_sensor.rs  types.rs
src/base_traits/: bldc_driver.rs  current_sensor.rs  pos_sensor.rs
src/common/: defaults.rs  helpers.rs  lp_filter.rs  pid.rs
