[package]
name = "sfoc_rs"
version = "0.3.0"
authors = ["Ben PHL <benphawke@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = [
	"core",
	"platforms/esp32_sfoc",
	"peripherals/AS5047P"
]
exclude = [
	"prototype",
	"spinnies",
]


[dependencies]
esp32_sfoc = { version = "0.1.0", path = "platforms/esp32_sfoc", optional = true }
sfoc_rs_core = { version = "0.0.1", path = "./core" }

[features]
esp32 = ["dep:esp32_sfoc"]

