[package]
name = "sfoc_rs"
version = "0.3.0"
authors = ["Ben PHL <benphawke@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = [
	"core",
	"platforms/esp32_sfoc",
	"peripherals/AS5047P",
	"spinnies/esp32/original", "spinnies/generic_spinny",
]
exclude = [
	"prototype",
]


[dependencies]
embedded-hal = "1.0.0"
esp32_sfoc = { version = "0.1.0", path = "platforms/esp32_sfoc", optional = true }
sfoc_rs_core = { version = "0.0.1", path = "./core" }

[features]
esp32 = ["dep:esp32_sfoc"]

[lib]
path = "src/lib.rs"