[package]
name = "sfoc-rs"
version = "0.1.0"
authors = ["Ben PHL <benphawke@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cordic = "0.1.5"
embedded-hal = "1.0.0"
embedded-time = "0.12.1"
foc = "0.2.0"
fugit = "0.3.7"
log = { version = "0.4.20" }
micromath = "2.1.0"
pid = "4.0.0"
num = { version = "0.4.3", default-features = false }
discrete_count = { version = "0.0.2", features = ["typenum", "fixed"] }
