[package]
name = "sfoc_rs_core"
version = "0.0.1"
authors = ["Ben PHL <benphawke@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cordic = "0.1.5"
embedded-hal = "1.0.0"
embedded-time = "0.12.1"
foc = "0.3.0"
fugit = "0.3.7"
log = { version = "0.4.20" }
micromath = "2.1.0"
pid = "4.0.0"
num = { version = "0.4.3", default-features = false }
discrete_count = {git = "https://github.com/Ben-PH/discrete_count", rev = "2b04f9d6953ffeba56fb4ee36ad4ca3522457250", features = ["typenum", "fixed"]}
