[package]
name = "sfoc_rs_core"
version = "0.0.1"
authors = ["Ben PHL <benphawke@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cordic = "0.1.5"
embedded-hal = "1.0.0"
embedded-time = "0.12.1"
foc = "0.3.0"
micromath = "2.1.0"
pid = "4.0.0"
discrete_count = {git = "https://github.com/Ben-PH/discrete_count", rev = "de1ce8d5987319aeea4dba678d86659787aaf951", features = ["typenum", "fixed"]}
