[package]
name = "esp32-sfoc"
version = "0.1.0"
authors = ["Ben PHL <benphawke@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "1.0.0"
embedded-time = "0.12.1"
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = [ "esp32" ] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
fixed = "1.27.0"
foc = "0.2.0"
fugit = "0.3.7"
log = { version = "0.4.20" }
sfoc-rs = {path = "../core"}
typenum = "1.17.0"
counters = {git = "https://github.com/Ben-PH/counter-proposal.git", rev = "07d19fe62c36219663c3917bb8cf1fe5eb752eaa"}
# counters = {path = "../../../embedded_work/counters/"}

