[package]
name = "original"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "defmt",
]}

esp-hal = { version = "0.22.0", features = [
    "esp32",
    "defmt",
] }
defmt            = "0.3.8"
defmt-rtt        = "0.4.1"
critical-section = "1.2.0"
sfoc_rs = { version = "0.3.0", path = "../../..", features = ["esp32"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
